Android 4.0等の古いOSで、プロフィール画面のレイアウトが崩れるバグの修正
close #117

--- a/Yukari/src/main/res/layout/fragment_profile.xml
+++ b/Yukari/src/main/res/layout/fragment_profile.xml
@@ -117,6 +117,7 @@
             android:layout_alignRight="@+id/centerHorizontal"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
             android:layout_marginTop="8dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="4dp"
@@ -171,6 +172,7 @@
             android:layout_alignLeft="@+id/centerHorizontal"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
             android:layout_marginTop="8dp"
             android:layout_marginLeft="4dp"
             android:layout_marginRight="16dp"
