メインメニューの項目選択時のエフェクトを追加

--- a/Yukari/src/main/res/values/colors.xml
+++ b/Yukari/src/main/res/values/colors.xml
@@ -32,6 +32,9 @@
     <drawable name="focus_key_light_color">#ca8c54d6</drawable>
     <drawable name="press_key_light_color">#ca8147cb</drawable>
 
+    <color name="focus_key_light_color">#ca8c54d6</color>
+    <color name="press_key_light_color">#ca8147cb</color>
+
     <drawable name="focus_gray_color">#caaa</drawable>
     <drawable name="press_gray_color">#c777</drawable>
 
