返信先の本文プレビューで画面を埋め尽くさないように、行数の上限を設けた
close #124

--- a/Yukari/src/main/res/layout/activity_tweet.xml
+++ b/Yukari/src/main/res/layout/activity_tweet.xml
@@ -182,7 +182,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:text="Tweet" />
+        android:text="Tweet"
+        android:ellipsize="end"/>
 
     <ImageView
         android:id="@+id/ivProfileHeader"
