--- a/Yukari/src/main/res/values/themes_colors.xml
+++ b/Yukari/src/main/res/values/themes_colors.xml
@@ -34,6 +34,10 @@
         <item name="dialogStyle">@drawable/dialog_full_material_light</item>
     </style>
 
+    <style name="ColorsTheme.Light.Translucent.NoTitle">
+        <item name="windowNoTitle">true</item>
+    </style>
+
     <style name="ColorsTheme.Light.Dialog.VertAnimation" parent="ColorsTheme.Light.Dialog">
         <item name="android:windowAnimationStyle">@style/Animation.Vert</item>
     </style>
