クイック引用の仕様を「長押しでの挙動を設定」から「短押しのデフォルト挙動を設定」に変更
仕様変更に伴って短押しが意図しない挙動になることを防ぐため、設定キー名を変更

--- a/Yukari/src/main/res/values/arrays.xml
+++ b/Yukari/src/main/res/values/arrays.xml
@@ -154,6 +154,7 @@
     </string-array>
 
     <string-array name="pref_quote_entries">
+        <item>常に方法を選択する</item>
         <item>非公式RT ( RT \@id: ... )</item>
         <item>QT ( QT \@id: ... )</item>
         <item>URLで引用 ( http://... )</item>
@@ -162,6 +163,7 @@
     </string-array>
 
     <string-array name="pref_quote_values">
+        <item>-1</item>
         <item>0</item>
         <item>1</item>
         <item>2</item>
