--- a/Yukari/src/main/res/layout/activity_moviepreview.xml
+++ b/Yukari/src/main/res/layout/activity_moviepreview.xml
@@ -14,11 +14,10 @@
         android:layout_alignParentRight="true"
         android:background="@drawable/rect_transbox">
 
-        <include
-            android:id="@+id/inclPreviewStatus"
+        <shibafu.yukari.view.TweetView
+            android:id="@+id/twvPreviewStatus"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            layout="@layout/row_tweet"
             android:layout_gravity="left"
             android:layout_weight="1" />
 
