--- a/Yukari/src/main/res/layout-land/activity_status.xml
+++ b/Yukari/src/main/res/layout-land/activity_status.xml
@@ -26,11 +26,10 @@
             android:paddingRight="10dp"
             android:paddingTop="12dp">
 
-            <include
+            <shibafu.yukari.view.TweetView
                 android:id="@+id/status_tweet"
-                layout="@layout/row_tweet"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center" />
 
             <TextView
