--- a/Yukari/src/main/res/layout/activity_asset.xml
+++ b/Yukari/src/main/res/layout/activity_asset.xml
@@ -2,8 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".activity.AssetExtractActivity">
+    android:layout_height="match_parent">
 
     <ProgressBar
         style="?android:attr/progressBarStyleHorizontal"
