ツイート画面のアカウント名の文字色がテーマによって変化しないことがあるバグを修正

--- a/Yukari/src/main/res/color/selector_key_yukari_dark_textcolor.xml
+++ b/Yukari/src/main/res/color/selector_key_yukari_dark_textcolor.xml
@@ -8,5 +8,5 @@
         android:state_focused="true"
         android:color="@android:color/white"/>
     <item
-        android:color="?attr/colorPrimary"/>
+        android:color="@color/key_color_4"/>
 </selector>
