--- a/Yukari/src/main/res/layout/fragment_oauth_mastodon.xml
+++ b/Yukari/src/main/res/layout/fragment_oauth_mastodon.xml
@@ -29,6 +29,7 @@
                 android:id="@+id/etInstanceHostName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:inputType="textUri"
                 android:hint="インスタンス名 (mstdn.jp とか)">
                 <requestFocus/>
             </EditText>
