--- a/Yukari/src/main/res/layout/row_statuslink.xml
+++ b/Yukari/src/main/res/layout/row_statuslink.xml
@@ -1,49 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:descendantFocusability="blocksDescendants"
-        >
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="6dp"
+    android:paddingRight="6dp"
+    android:paddingTop="2dp"
+    android:paddingBottom="2dp"
+    android:minHeight="54dp"
+    android:descendantFocusability="blocksDescendants">
 
     <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="ID"
-            android:id="@+id/statuslink_category"
-            android:layout_gravity="left|center_vertical"
-            android:autoText="false"
-            android:background="?attr/colorPrimary"
-            android:textColor="#fff"
-            android:visibility="gone"
-            android:paddingLeft="8dp"
-            android:paddingTop="4dp"
-            android:paddingRight="4dp"
-            android:paddingBottom="4dp"/>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="6dp"
-        android:layout_marginTop="6dp"
-        android:layout_marginRight="6dp"
-        android:layout_marginBottom="6dp">
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Content"
+        android:id="@+id/statuslink_content"
+        android:layout_gravity="left|center_vertical"
+        android:layout_weight="1"
+        android:padding="4dp"/>
 
-        <LinearLayout
-            android:id="@+id/linearLayout"
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"/>
-
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Content"
-                android:id="@+id/statuslink_content"
-                android:layout_gravity="left|center_vertical"
-                android:padding="4dp"/>
-    </LinearLayout>
+    <ImageButton
+        android:id="@+id/statuslink_actions"
+        android:src="@drawable/ic_menu_dark"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"/>
 </LinearLayout>
