--- a/Yukari/src/main/res/layout/row_loading.xml
+++ b/Yukari/src/main/res/layout/row_loading.xml
@@ -2,8 +2,7 @@
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="36dp">
+    android:layout_height="match_parent">
 
     <com.rey.material.widget.ProgressView
         style="@style/Yukari.Material.CircularProgress"
