--- a/Yukari/src/main/res/values/styles.xml
+++ b/Yukari/src/main/res/values/styles.xml
@@ -75,4 +75,8 @@
         <item name="pv_progressMode">indeterminate</item>
         <item name="pv_progressStyle">@style/Yukari.Material.Drawable.CircularProgress</item>
     </style>
+
+    <style name="Yukari.TextAppearance.TabTitle" parent="TextAppearance.AppCompat.Medium.Inverse">
+        <item name="android:textColor">#ccc</item>
+    </style>
 </resources>
