Stream接続状態のバックアップ設定を定義

--- a/Yukari/src/main/res/values/arrays.xml
+++ b/Yukari/src/main/res/values/arrays.xml
@@ -247,6 +247,7 @@
         <item>下書き</item>
         <item>検索履歴</item>
         <item>ハッシュタグ履歴</item>
+        <item>ストリーミング接続状態</item>
         <item>その他の設定</item>
     </string-array>
 
